--- a/app/views/trailers/index.html.erb
+++ b/app/views/trailers/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Index Trailer</h1>
 
-<% @movies.each do |movie| %>
-  <%= movie['title'] %>
+<% movie = @movies.first %>
+  <%= movie %>
   <hr>
-<% end %>
+  <%= key = movie['videos']['results'].first['key'] %>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= key %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <hr>
+
