--- a/app/views/filters/new.html.erb
+++ b/app/views/filters/new.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <%= simple_form_for :filter, url: filters_path, method: :post do |f| %>
-    <%= f.input :moment, label: "When do you want to watch a movie?", collection: @moments %>
+    <%= f.input :moment, label: "What are you looking for?", collection: @moments, as: :radio_buttons %>
+    <hr>
 
+    <h4> Pick your favorite genres:</h3>
     <div class="collection-check-boxes">
       <div class="row">
         <%= f.collection_check_boxes :genre_ids, @genres, :tmdb_id, :name do |input| %>
