--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,13 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
-    <img src="images/logo.png" alt="logo">
-  </a>
+  <%= link_to image_tag("logo.png", class: "navbar-wagon-brand"),
+  root_path %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <a href="" class="navbar-wagon-item navbar-wagon-link">New filters</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Profile</a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link">My movies</a>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Log out</a>
 
     <!-- Profile picture with dropdown list -->
@@ -29,8 +28,8 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">New filters</a></li>
-        <li><a href="#">Profile</a></li>
+        <li><%= link_to "My preferences", new_filter_path %></li>
+        <li><a href="#">My movies</a></li>
         <li><a href="#">Log out</a></li>
       </ul>
     </div>
