add simple_form_for like

--- a/app/views/trailers/index.html.erb
+++ b/app/views/trailers/index.html.erb
@@ -24,7 +24,15 @@
       </div>
     </div>
   </div>
+
+  <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
+  <% f.input :opinion, input_html: { value: true } %>
+  <% f.input :tmdb_id, input_html: { value: @movie[:id]}   %>
+  <%= f.button :submit, "like" %>
+  <% end %>
 </div>
+
+
 
 
 
