add params in form like/dislike

--- a/app/views/trailers/index.html.erb
+++ b/app/views/trailers/index.html.erb
@@ -26,13 +26,16 @@
   </div>
 
   <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
-  <% f.input :opinion, input_html: { value: true } %>
-  <% f.input :tmdb_id, input_html: { value: @movie[:id]}   %>
+  <%= f.input :value, input_html: { value: true }, as: :hidden %>
+  <%= f.input :tmdb_id, input_html: { value: @movie["id"] }, as: :hidden %>
+  <%= f.input :next_tmdb_id, input_html: { value: @movies[1]["id"] }, as: :hidden %>
   <%= f.button :submit, "like" %>
+  <% end %>
 
   <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
-  <% f.input :opinion, input_html: { value: false } %>
-  <% f.input :tmdb_id, input_html: { value: @movie[:id]}   %>
+  <%= f.input :value, input_html: { value: false }, as: :hidden %>
+  <%= f.input :tmdb_id, input_html: { value: @movie["id"]}, as: :hidden %>
+  <%= f.input :next_tmdb_id, input_html: { value: @movies[1]["id"]}, as: :hidden %>
   <%= f.button :submit, "dislike" %>
   <% end %>
 </div>
