--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,3 +9,9 @@ $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
 
+$grey-background: #282d34;
+$grey-card: #1d2024;
+$grey-typo: #a9acad;
+$red-btn: #ff4d56;
+$red-btn-hover: #f4444d;
+
