--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><%= link_to "My preferences", new_filter_path %></li>
-        <li><a href="#">My movies</a></li>
+        <li><%= link_to "My movies", my_movies_path %></li>
         <li><a href="#">Log out</a></li>
       </ul>
     </div>
