tmdb_id + index

--- a/app/views/my/movies/index.html.erb
+++ b/app/views/my/movies/index.html.erb
@@ -1,6 +1,7 @@
 <% @movies.each do |movie| %>
-  <%= movie.picture %>
+  <%= movie.poster %>
   <%= movie.title %>
+  <%= movie.release_date %>
 
   <hr>
 <% end %>
