--- a/app/views/trailers/index.html.erb
+++ b/app/views/trailers/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <div id="carousel-example-generic" class="carousel" data-ride="carousel">
         <div class="carousel-inner" role="listbox">
           <div class="item active">
             <% movie = @movies.first %>
@@ -26,17 +26,17 @@
   </div>
 
   <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
-  <%= f.input :value, input_html: { value: true }, as: :hidden %>
-  <%= f.input :tmdb_id, input_html: { value: @movie["id"] }, as: :hidden %>
-  <%= f.input :next_tmdb_id, input_html: { value: @movies[1]["id"] }, as: :hidden %>
-  <%= f.button :submit, "like" %>
+    <%= f.input :value, input_html: { value: true }, as: :hidden %>
+    <%= f.input :tmdb_id, input_html: { value: @movie["id"] }, as: :hidden %>
+    <%= f.input :next_tmdb_id, input_html: { value: @movies[1]["id"] }, as: :hidden %>
+    <%= f.button :submit, "like" %>
   <% end %>
 
   <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
-  <%= f.input :value, input_html: { value: false }, as: :hidden %>
-  <%= f.input :tmdb_id, input_html: { value: @movie["id"]}, as: :hidden %>
-  <%= f.input :next_tmdb_id, input_html: { value: @movies[1]["id"]}, as: :hidden %>
-  <%= f.button :submit, "dislike" %>
+    <%= f.input :value, input_html: { value: false }, as: :hidden %>
+    <%= f.input :tmdb_id, input_html: { value: @movie["id"]}, as: :hidden %>
+    <%= f.input :next_tmdb_id, input_html: { value: @movies[1]["id"]}, as: :hidden %>
+    <%= f.button :submit, "dislike" %>
   <% end %>
 </div>
 
