--- a/app/views/my/movies/index.html.erb
+++ b/app/views/my/movies/index.html.erb
@@ -1,11 +1,14 @@
-<div class="row">
-  <% @movies.each do |movie| %>
-    <div class="col-xs-6">
-      <%= link_to image_tag("#{movie.poster}", style:"height: 297px; width: 210px;"), my_movie_path(movie) %>
-      <%= movie.title %>
-      <%= movie.release_date %>
-    </div>
-</div>
+<div class="container-fluid">
+  <div class="row">
+    <% @movies.each do |movie| %>
+      <div class="col-xs-6">
 
-  <% end %>
+        <%= image_tag("#{movie.poster}", style:"width: 100%;") %>
+        <%= movie.title %>
+        <%= movie.release_year %>
+        <%= link_to "", my_movie_path(movie) %>
+      </div>
+    <% end %>
+  </div>
+</div>
 
