change btn courousel

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -13,3 +13,9 @@
     min-height: 100%;
     max-height: none;
 }
+
+.botton {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px;
+}
