--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,17 +1,12 @@
 .carousel-inner {
     height: 500px;
+    width: 100% !important;
 }
 
 .carousel-inner .item {
     overflow: hidden;
     max-width: 100%;
     max-height: 100%;
-}
-
-.carousel-inner .item img {
-    width: 100%;
-    min-height: 100%;
-    max-height: none;
 }
 
 .botton {
