css card in mymovies index

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,9 +2,7 @@
 @import "alert";
 @import "navbar";
 @import "collection-check-boxes";
+@import "carousel";
+@import "cards";
 
-
-
-
-@import "carousel"
 
