--- a/app/views/my/movies/index.html.erb
+++ b/app/views/my/movies/index.html.erb
@@ -1,12 +1,21 @@
 <div class="container-fluid">
   <div class="row">
     <% @movies.each do |movie| %>
-      <div class="col-xs-6">
-
-        <%= image_tag("#{movie.poster}", style:"width: 100%;") %>
-        <%= movie.title %>
-        <%= movie.release_year %>
-        <%= link_to "", my_movie_path(movie) %>
+    <div class="card">
+        <div class="col-xs-6">
+          <div class="movie-poster">
+            <%= image_tag("#{movie.poster}", style:"width: 100%;") %>
+          </div>
+          <div class="movie-title">
+            <%= movie.title %>
+          </div>
+          <div class="movie-year">
+            <%= movie.release_year %>
+          </div>
+          <div class="movie-link">
+            <%= link_to "", my_movie_path(movie) %>
+          </div>
+        </div>
       </div>
     <% end %>
   </div>
