--- a/app/views/trailers/index.html.erb
+++ b/app/views/trailers/index.html.erb
@@ -3,31 +3,37 @@
     <div class="col-xs-12">
       <div id="carousel-example-generic" class="carousel slide">
         <div class="carousel-inner" role="listbox">
-          <% @movies.each_with_index do |movie, index| %>
-            <div class="item <%= "active" if index.zero? %>">
-              <%# key = movie['videos']['results'].first['key'] %>
-              <% key = movie.dig('videos', 'results').try(:first).try(:dig, 'key') %>
-              <% if key.present? %>
-                <%= render "trailers/youtube_iframe", youtube_key: key %>
-              <% end %>
-              <%= movie['title'] %>
-              <div class="botton">
-                <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
-                  <%= f.input :value, input_html: { value: true }, as: :hidden %>
-                  <%= f.input :tmdb_id, input_html: { value: movie["id"] }, as: :hidden %>
-                  <%= f.input :next_tmdb_id, input_html: { value: @movies[index + 1].try(:[], "id") }, as: :hidden %>
-                  <%= f.button :submit, "like", class: "btn btn-success" %>
+          <% if @movies.empty? %>
+            <h1>Oooops</h1>
+            <h4>We haven't any trailer matching your preferences...</h4>
+            <%= button_to "Change my preferences", new_filter_path, method: :get, class: "btn btn-danger" %>
+          <% else %>
+            <% @movies.each_with_index do |movie, index| %>
+              <div class="item <%= "active" if index.zero? %>">
+                <%# key = movie['videos']['results'].first['key'] %>
+                <% key = movie.dig('videos', 'results').try(:first).try(:dig, 'key') %>
+                <% if key.present? %>
+                  <%= render "trailers/youtube_iframe", youtube_key: key %>
                 <% end %>
+                <%= movie['title'] %>
+                <div class="botton">
+                  <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
+                    <%= f.input :value, input_html: { value: true }, as: :hidden %>
+                    <%= f.input :tmdb_id, input_html: { value: movie["id"] }, as: :hidden %>
+                    <%= f.input :next_tmdb_id, input_html: { value: @movies[index + 1].try(:[], "id") }, as: :hidden %>
+                    <%= f.button :submit, "like", class: "btn btn-success" %>
+                  <% end %>
 
-                <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
-                  <%= f.input :value, input_html: { value: false }, as: :hidden %>
-                  <%= f.input :tmdb_id, input_html: { value: movie["id"]}, as: :hidden %>
-                  <%= f.input :next_tmdb_id, input_html: { value: @movies[index + 1].try(:[], "id") }, as: :hidden %>
-                  <%= f.button :submit, "dislike", class: "btn btn-danger"  %>
-                <% end %>
+                  <%= simple_form_for :opinion, url: opinions_path, method: :post, remote: true do |f| %>
+                    <%= f.input :value, input_html: { value: false }, as: :hidden %>
+                    <%= f.input :tmdb_id, input_html: { value: movie["id"]}, as: :hidden %>
+                    <%= f.input :next_tmdb_id, input_html: { value: @movies[index + 1].try(:[], "id") }, as: :hidden %>
+                    <%= f.button :submit, "dislike", class: "btn btn-danger"  %>
+                  <% end %>
+                </div>
+
               </div>
-
-            </div>
+            <% end %>
           <% end %>
         </div>
       </div>
