--- a/app/views/my/movies/show.html.erb
+++ b/app/views/my/movies/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:body_class, "flex-column") %>
+
 
 <div class="backdrop">
   <div class="backdrop-img" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('<%= "https://image.tmdb.org/t/p/w500/#{@movie['backdrop_path']}" %>')"></div>
