--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,11 +38,13 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $grey-typo;
+  font-family: $body-font;
+  font-weight: normal;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: $red-btn;
   text-decoration: none;
 }
 
