--- a/app/assets/stylesheets/components/_backdrop.scss
+++ b/app/assets/stylesheets/components/_backdrop.scss
@@ -23,6 +23,29 @@ body.flex-column {
       position:relative;
       padding-top: 10px;
     }
+    .mm-modal {
+      position: absolute;
+      top: 0px;
+      bottom: 0px;
+      left: 0px;
+      right: 0px;
+      background-color: rgba(black, 0.6);
+      z-index: 20;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      display: none;
+
+      .button-quit {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        text-decoration: none;
+        color: white;
+        padding: 10px;
+      }
+    }
   }
+
 }
 
