--- a/app/views/trailers/index.html.erb
+++ b/app/views/trailers/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
       <div id="carousel-example-generic" class="carousel slide">
         <div class="carousel-inner" role="listbox">
-          <% if @trailers.empty? %>
+          <% if @trailers.empty? || @next_trailer.nil? %>
             <h1>Oooops</h1>
             <h4>We haven't any trailer matching your preferences...</h4>
             <%= button_to "Change my preferences", new_filter_path, method: :get, class: "btn btn-danger" %>
