--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -9,16 +9,16 @@
 .poster {
   position: relative;
   &::after {
-    content: "►";
+    content: "▶";
     color: white;
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 92px;
-    margin-left: -36px;
-    margin-top: -70px;
-    text-shadow: 0 0 20px rgba(0,0,0,0.5);
-    opacity: 0.8;
+    font-size: 67px;
+    margin-left: -25px;
+    margin-top: -55px;
+    text-shadow: 0 0 20px rgba(0,0,0,0.6);
+    opacity: 0.9;
   }
 
   img{
