--- a/app/views/filters/new.html.erb
+++ b/app/views/filters/new.html.erb
@@ -14,6 +14,7 @@
                 <i class="fa fa-check-square-o checked" aria-hidden="true"></i>
                 <i class="fa fa-square-o unchecked" aria-hidden="true"></i>
                 <%= image_tag input.object.picture, class: "picture" %>
+                <%= image_tag "icon.png", class: "icon-checked" %>
                 <div class="text-icon" > <%= input.text %></div>
               </div>
             </label>
