--- a/app/views/my/movies/show.html.erb
+++ b/app/views/my/movies/show.html.erb
@@ -19,6 +19,7 @@
     <div class="synopsis">
       <p><%= @movie['overview'] %></p>
     </div>
+    <%= link_to "< Back to My Movies", my_movies_path, class: "back-link" %>
   </div>
   <div class="mm-modal">
     <%= link_to "x", my_movie_path(@movie), class: "button-quit" %>
