--- a/app/assets/stylesheets/components/_collection-check-boxes.scss
+++ b/app/assets/stylesheets/components/_collection-check-boxes.scss
@@ -5,8 +5,18 @@
   font-size: 16px;
   text-align: center;
 
+
+  .check-box-label {
+    width: 100%;
+    padding: 5px;
+  }
+
   .col-xs-6 {
     padding: 0px;
+  }
+
+  .check-box-moment {
+
   }
 
 
@@ -24,30 +34,40 @@
   .check-box {
     background: #1d2024;
     border-radius: 3px;
-    padding:18px 5px;
-    color: $grey-typo;
+    color: white;
     border: 2px solid white;
-    font-weight: normal;
+    font-weight: bolder;
     height: 118px;
-    width: 157px;
+    width: 100%;
     position: relative;
+    background-size: cover;
+    background-position: center;
     .icon-checked {
       display: none;
-      height: 10px;
-      width: 10px;
-
+      height: 15px;
+      width: 15px;
+    }
+    .check-box-filter {
+      background: rgba(50, 50, 50, 0.2);
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
   input:checked + .check-box {
-    border: 2px solid rgb(107, 200, 139);
+    border: 2px solid rgb(237, 91, 92);
+    box-shadow: inset 0 0 0 4px $red-btn;
     background-color: white;
-    color: rgb(15, 15, 15);
     .icon-checked {
       display: inline-block;
       position: absolute;
       top: 5px;
       right: 5px;
+    }
+    .check-box-filter {
+      background: rgba(237, 91, 92, 0.5);
     }
   }
 }
@@ -73,10 +93,6 @@ h4, .col-form-label {
 .btn-block:hover {
   color: white;
   background-color: $red-btn-hover;
-}
-
-.text-icon {
-  margin-top: 10px;
 }
 
 .collection_radio_buttons {
