--- a/app/views/filters/new.html.erb
+++ b/app/views/filters/new.html.erb
@@ -1,21 +1,23 @@
 <div class="container">
-  <%= simple_form_for :filter, url: filters_path, method: :post do |f| %>
-    <%= f.input :moment, label: "What are you looking for?", collection: @moments, checked: @selected_moment, as: :radio_buttons, type: "checkbox"%>
-    <hr>
+
+    <%= simple_form_for :filter, url: filters_path, method: :post do |f| %>
+      <div class="check-box-moment" style="height: 100vh;">
+      <%= f.input :moment, label: "What are you looking for?", collection: @moments, checked: @selected_moment, as: :radio_buttons, type: "checkbox"%>
+      <hr>
+    </div>
 
     <h4> Pick your favorite genres:</h4>
     <div class="collection-check-boxes">
       <div class="row">
         <%= f.collection_check_boxes :genre_ids, @genres, :tmdb_id, :name, checked: @selected_genre_ids do |input| %>
           <div class="col-xs-6">
-            <label>
+            <label class="check-box-label">
               <%= input.check_box %>
-              <div class="check-box">
-                <i class="fa fa-check-square-o checked" aria-hidden="true"></i>
-                <i class="fa fa-square-o unchecked" aria-hidden="true"></i>
-                <%= image_tag input.object.picture, class: "picture" %>
-                <%= image_tag "icon.png", class: "icon-checked" %>
-                <div class="text-icon" > <%= input.text %></div>
+              <div class="check-box" style="background-image: url(<%= image_path input.object.picture %>)">
+                <div class="check-box-filter">
+                  <%= image_tag "validate.png", class: "icon-checked" %>
+                  <div class="text-icon" > <%= input.text %></div>
+                </div>
               </div>
             </label>
           </div>
