improved title in my/movies/index

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -10,7 +10,8 @@
 }
 
 .movie-title {
-  widows: 100%;
+  color: white;
+  font-weight: 400;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
