--- a/app/views/my/movies/index.html.erb
+++ b/app/views/my/movies/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col-xs-6">
         <div class="card">
           <div class="movie-poster">
-            <%= tmdb_image_tag("#{movie.poster}", style: "width: 100%;") %>
+            <%= tmdb_image_tag("#{movie.poster}", style: "width: 100%; height: 100%;") %>
           </div>
           <div class="movie-title">
             <%= movie.title %>
