change picture genre

--- a/app/views/filters/new.html.erb
+++ b/app/views/filters/new.html.erb
@@ -1,10 +1,9 @@
 <div class="container">
 
-    <div class="check-box-moment" style="height: 100vh;">
+    <div class="check-box-moment" style="height: 100vh; display: flex;height: 100vh; flex-direction: column; justify-content: center;">
     <%= simple_form_for :filter, url: filters_path, method: :post do |f| %>
       <div id="button">
         <%= f.input :moment, label: "What are you looking for?", collection: @moments, checked: @selected_moment, as: :radio_buttons, type: "checkbox"%>
-        <hr>
       </div>
     </div>
 
@@ -27,7 +26,14 @@
       </div>
     </div>
     <div class="col-xs-8 col-xs-offset-2">
-      <%= f.button :submit, class: "btn btn-block"  %>
+      <%= f.button :submit, class: "btn btn-block" %>
     </div>
   <% end %>
+</div>
+
+<div class="container">
+  <div class="round">
+    <input type="checkbox" id="checkbox" />
+    <label for="checkbox"></label>
+  </div>
 </div>
