added a status in the movies index and made a small modif on the tmdb/discover for the upcoming movies (+1 jour plutot que +7)

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,6 @@
 .card {
   position: relative;
   margin-top: 15px;
-
 }
 
 .movie-poster {
@@ -24,5 +23,8 @@
   left: 0;
   right: 0;
   display: block;
+}
 
+.movie-infos {
+  font-size: 15px;
 }
