--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -51,48 +51,84 @@
   text-decoration: none;
 }
 
-/* Dropdown menu */
-.navbar-wagon-dropdown-menu {
-  margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
-}
-.navbar-wagon-dropdown-menu li > a {
-  transition: color 0.3s ease;
-  font-weight: bold !important;
-  color: white !important;
-  font-size: 15px !important;
-  line-height: 22px !important;
-  padding: 10px 20px;
-  border-top: 1px solid rgba(60, 60, 60, 1);
-  border-bottom: 1px solid rgba(35, 35, 35, 1);
-}
-.navbar-wagon-dropdown-menu li > a:hover {
-  background-color:  rgba(66, 66, 66, 1) !important;
-  color: blue-future !important;
-}
-.navbar-wagon-dropdown-menu:before {
-  content: ' ';
-  height: 10px;
-  width: 10px;
+
+.toggle-menu {
+  display: block;
+  width: 28px;
+  height: 28px;
   position: absolute;
-  right: 10px;
-  top: -6px;
-  background-color: rgba(40, 40, 40, 1);
-  transform: rotate(45deg);
-  border-left: 1px solid white;
-  border-top: 1px solid white;
 }
 
-.dropdown-menu.dropdown-menu-right.navbar-wagon-dropdown-menu {
-  background-color: rgba(40, 40, 40, 1);
-  border-radius: 0px!important;
+.toggle-menu span:after, .toggle-menu span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 9px;
 }
 
-.dropdown-menu.dropdown-menu-right.navbar-wagon-dropdown-menu:before {
-  background-color: rgba(40, 40, 40, 1);
+.toggle-menu span:after {
+  top: 18px;
 }
 
-.fa-bars {
-  color: white;
+.toggle-menu span {
+  position: relative;
+  display: block;
+}
+
+.toggle-menu span, .toggle-menu span:after, .toggle-menu span:before {
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+
+.toggle-menu.on span {
+  background-color: transparent;
+}
+
+.toggle-menu.on span:before {
+  -webkit-transform: rotate(45deg) translate(-1px, 0);
+  -ms-transform: rotate(45deg) translate(-1px, 0);
+  transform: rotate(45deg) translate(-1px, 0);
+}
+
+.toggle-menu.on span:after {
+  -webkit-transform: rotate(-45deg) translate(6px, -7px);
+  -ms-transform: rotate(-45deg) translate(6px, -7px);
+  transform: rotate(-45deg) translate(6px, -7px);
+}
+
+.tog-menu > a {
+  margin-top: 14px;
+  margin-left: 10px;
+  position: relative;
+  z-index: 9999;
+}
+
+.hidden-menu {
+  border: 1px solid rgba(50,50,50,1);
+  display: none;
+  position: absolute;
+  right: 0px;
+  top: 71px;
+  background: radial-gradient(rgba(54, 56, 61, 1), rgba(45,45,45,1));
+
+
+  ul {
+    list-style: none;
+    padding: 5px 10px;
+    margin-bottom: 0px;
+    text-align: left;
+  }
+
+  li, a {
+    padding: 10px 10px;
+    color: white;
+    font-weight: 400;
+  }
 }
