--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,14 +26,20 @@
   </div>
 
   <!-- Dropdown appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><%= link_to "My preferences", new_filter_path %></li>
-        <li><%= link_to "My movies", my_movies_path %></li>
-        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-      </ul>
-    </div>
-  </div>
+
+
+
+      <div class="tog-menu hidden-md hidden-lg">
+        <a href="" class="toggle-menu"><span></span></a>
+      </div>
+
+      <div class="hidden-menu">
+        <ul>
+          <li><%= link_to "My preferences", new_filter_path %></li>
+          <li><%= link_to "My movies", my_movies_path %></li>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        </ul>
+      </div>
+
 </div>
+
